@@ -8,6 +8,7 @@ Changes in version 1.3 (TBD)
 - Fixed bug 3099314: Rotator Thrashing.
 - Fixed bug 2167508: problems in rotator controller.
 - Fixed bug from Ubuntu #706452:Update from local files won't work with files in UPPER case 
+- Fixed bug 3171615: Searching for satellites in the satellite selector
 
 Changes in version 1.2 (12 Oct 2010)
 
